<?xml version="1.0" encoding="UTF-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="52dp"
            android:layout_gravity="bottom"
            android:background="@drawable/maintab_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/tab_main_page"
               	style="@style/tab_style"
				android:background="@drawable/tab_selector"
                android:drawableTop="@drawable/main_page"
                android:text="@string/main_page" />

            <RadioButton
                android:id="@+id/tab_collect"
                style="@style/tab_style"
                android:background="@drawable/tab_selector"
                android:drawableTop="@drawable/collect"
                android:text="@string/search"/>

            <RadioButton
                android:id="@+id/tab_other"
                style="@style/tab_style"
                android:background="@drawable/tab_selector"
                android:drawableTop="@drawable/other"
                android:text="@string/other" />

        </RadioGroup>
    </LinearLayout>

</TabHost>