<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EDEDED"
    android:orientation="vertical" >

    <include layout="@layout/common_topbar"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbox2"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat_password"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_repeat_pwd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbox2"
                android:inputType="textPassword"
                android:padding="5dp"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_modi_pwd"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_btn_selector"
            android:gravity="center"
            android:text="@string/confirm_modify"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>