<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_color"
    android:orientation="vertical" >

    <include layout="@layout/common_topbar" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_color"
        android:orientation="vertical" >

        <ViewFlipper
            android:id="@+id/ViewFlipper"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:background="@drawable/shelf_panel"
            android:orientation="vertical" >

            <!-- 初始加载 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="left|center_vertical"
                android:orientation="vertical" >

                <com.mobilelibrary.view.ProgressBar
                    android:id="@+id/ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </com.mobilelibrary.view.ProgressBar>
            </LinearLayout>

            <!-- 加载成功 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <Gallery
                    android:id="@+id/Gallery"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:spacing="40dp" />
            </LinearLayout>

            <!-- 加载失败 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="15dip"
                android:gravity="left|center_vertical"
                android:orientation="vertical" >

                <com.mobilelibrary.view.FailureBar
                    android:id="@+id/FailureBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >
                </com.mobilelibrary.view.FailureBar>
            </LinearLayout>
        </ViewFlipper>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_search_key"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="7dip"
                android:layout_weight="1"
                android:textSize="14sp"
                android:hint="@string/search_book_key_hint"
                android:background="@drawable/inputbox2"
                android:paddingLeft="7dp"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_do_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:textColor="@android:color/white"
                android:background="@drawable/month_btn_selector"
                android:text="@string/search" >
            </Button>
        </LinearLayout>

        <ViewFlipper
            android:id="@+id/SearchViewFlipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="#fff" >

            <ListView
                android:id="@+id/SearchListView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:divider="#000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_results" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/search_list_hint" >
            </TextView>
        </ViewFlipper>
    </LinearLayout>

</LinearLayout>